Criação da camada de infra

--- a/Cadastro.Tarefas.Api/Cadastro.Tarefas.Api/Cadastro.Tarefas.Api.csproj
+++ b/Cadastro.Tarefas.Api/Cadastro.Tarefas.Api/Cadastro.Tarefas.Api.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cadastro.Tarefas.Core\Cadastro.Tarefas.Core.csproj" />
+    <ProjectReference Include="..\Cadastro.Tarefas.Infra\Cadastro.Tarefas.Infra.csproj" />
   </ItemGroup>
 
 </Project>
